--- a/notes/improving-protocol-standards.tex
+++ b/notes/improving-protocol-standards.tex
@@ -49,6 +49,8 @@ This document contains notes on the papers read as part of a literature survey f
 %==================================================================================================
 \section{Packet format definition languages}
 
+TEST
+
 One of the objectives of the project is to introduce (relatively simple) formalisms into
 standards documents, such that tooling can be used to improve the quality of these
 documents. One area where documents vary in quality, and that could easily be
@@ -992,7 +994,7 @@ Further, the language should be context-free to make sure that formal
 analysis is possible, and to improve the reliability of implementations.
 
 This last constraint -- being context-free - is an interesting one, with
-implications on the possible binary packet formats that are allowed. 
+implications on the possible binary packet formats that are allowed.
 
 %==================================================================================================
 \section{Parsing IETF protocols}
