Add exponentiation method

--- a/notes/ir.tex
+++ b/notes/ir.tex
@@ -241,6 +241,7 @@ The runtime defines the following traits:
       \item \texttt{multiply(self: Self, other: Self)\\\hspace*{0.5cm}$\rightarrow$ Self}
       \item \texttt{divide(self: Self, other: Self) $\rightarrow$ Self}
       \item \texttt{modulo(self: Self, other: Self) $\rightarrow$ Self}
+      \item \texttt{pow(self: Self, other: Self) $\rightarrow$ Self}
     \end{itemize}
 
   \item The \code{NumberRepresentable} trait defines a method that can be
